--- a/framework/lib.parent/lib.jetty/pom.xml
+++ b/framework/lib.parent/lib.jetty/pom.xml
@@ -14,6 +14,10 @@
 			<groupId>org.eclipse.jetty.aggregate</groupId>
 			<artifactId>jetty-all</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -29,7 +33,7 @@
 						<Bundle-Version>${pom.version}</Bundle-Version>
 						<Import-Package></Import-Package>
 						<Export-Package>*</Export-Package>
-						<Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
+						<Embed-Dependency>*</Embed-Dependency>
 						<Embed-Directory>target/dependency</Embed-Directory>
 						<Embed-StripGroup>true</Embed-StripGroup>
 						<Bundle-RequiredExecutionEnvironment>JavaSE-${java.version}</Bundle-RequiredExecutionEnvironment>
