--- a/framework/lib.parent/lib.jetty/build.properties
+++ b/framework/lib.parent/lib.jetty/build.properties
@@ -1,2 +1,4 @@
 bin.includes = META-INF/,\
-               .
+               .,\
+               target/dependency/javax.servlet-api-3.1.0.jar,\
+               target/dependency/javax.websocket-api-1.0.jar
