--- a/framework/lib.parent/lib.util/build.properties
+++ b/framework/lib.parent/lib.util/build.properties
@@ -1,2 +1,7 @@
 bin.includes = META-INF/,\
-               .
+               .,\
+               target/dependency/hamcrest-core-1.3.jar,\
+               target/dependency/junit-4.12.jar,\
+               target/dependency/log4j-1.2.17.jar,\
+               target/dependency/logback-core-1.1.2.jar,\
+               target/dependency/xml-apis-1.0.b2.jar
